--- a/css/main.scss
+++ b/css/main.scss
@@ -55,3 +55,8 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting"
 ;
+
+hr {
+  margin: 30px 0;
+  border-top: 1px solid $grey-color-light;
+}
