quiz melhor investimento

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   {% include head.html %}
 
   <body>
-
+    {% include facebook.html %}
     {% include header.html %}
 
     <div class="page-content">
