--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,11 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+
+  <link rel="icon" href="{{ "/assets/icons/favicon.png" | prepend: site.baseurl }}" sizes="32x32">
+  <link rel="icon" href="{{ "/assets/icons/favicon16.png" | prepend: site.baseurl }}" sizes="16x16">
+  <link rel="apple-touch-icon" href="{{ "/assets/icons/apple57.png" | prepend: site.baseurl }}">
+  <link rel="apple-touch-icon" sizes="72x72" href="{{ "/assets/icons/apple72.png" | prepend: site.baseurl }}">
+  <link rel="apple-touch-icon" sizes="114x114" href="{{ "/assets/icons/apple114.png" | prepend: site.baseurl }}">
+  <link rel="apple-touch-icon" sizes="144x144" href="{{ "/assets/icons/apple144.png" | prepend: site.baseurl }}">
 </head>
