--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
         <a class="page-link" href="{{ "/como-abrir-uma-factoring/" | prepend: site.baseurl }}">Como abrir</a>
         <a class="page-link" href="{{ "/softwares-e-sistemas-para-factoring/" | prepend: site.baseurl }}">Softwares</a>
         <a class="page-link" href="{{ "/franquias-de-factoring/" | prepend: site.baseurl }}">Franquias</a>
-        <a class="page-link" href="{{ "/empresas-de-factoring/" | prepend: site.baseurl }}">Empresas</a>
+        <!-- <a class="page-link" href="{{ "/empresas-de-factoring/" | prepend: site.baseurl }}">Empresas</a> -->
         <a class="page-link" href="{{ "/cursos-de-factoring/" | prepend: site.baseurl }}">Cursos</a>
       </div>
     </nav>
